- Fixed High Contrast issue in tab selections

--- a/sass/high-contrast-theme.scss
+++ b/sass/high-contrast-theme.scss
@@ -233,7 +233,7 @@ $rating-border-color: $slate06;
 $rating-hover-color: $primary-color;
 
 // Tabs
-$tab-selected-color: $primary-color;
+$tab-selected-color: $azure09;
 $tab-border-color: $slate04;
 $tab-hover-color: $font-color-extrahighcontrast;
 
